This fixes bug #951 It's not required to enable the AUX ports after enabling active multiplexing, because the default according to specification is already enabled. In fact, Sony VGN-FS115M laptop even has a bug when processing the enable.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@19566 a95241bf-73f2-0310-859d-f6bbb57e9c96